# maxiforth

./: CMakeLists.txt  LICENSE  README.md  ROADMAP.md  core_forth.asm  defines.ninc  init.forth  loop-cheat.forth  macros.ninc  maxiForth.asm  primitives.ninc
